// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component app bar indented when drawer is open 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2 MainAppBar-appBarShift-3"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        className="MainAppBar-menuButton-7 MainAppBar-hide-9"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        className="MainAppBar-title-5"
        color="inherit"
        noWrap={true}
        onClick={[Function]}
        variant="h6"
      >
        title
      </WithStyles(Typography)>
      <WithStyles(Button)
        className="MainAppBar-button-6"
        style={
          Object {
            "paddingTop": 3,
          }
        }
      >
        <WithStyles(Typography)
          color="inherit"
          noWrap={true}
          style={
            Object {
              "marginTop": 3,
            }
          }
        >
          contact
        </WithStyles(Typography)>
      </WithStyles(Button)>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        className="MainAppBar-button-6"
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;

exports[`Main app bar component app bar renders correctly 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        className="MainAppBar-menuButton-7"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        className="MainAppBar-title-5"
        color="inherit"
        noWrap={true}
        onClick={[Function]}
        variant="h6"
      >
        title
      </WithStyles(Typography)>
      <WithStyles(Button)
        className="MainAppBar-button-6"
        style={
          Object {
            "paddingTop": 3,
          }
        }
      >
        <WithStyles(Typography)
          color="inherit"
          noWrap={true}
          style={
            Object {
              "marginTop": 3,
            }
          }
        >
          contact
        </WithStyles(Typography)>
      </WithStyles(Button)>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        className="MainAppBar-button-6"
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;

exports[`Main app bar component does not render contact button when feature is false 1`] = `
<div
  className="MainAppBar-root-1"
>
  <WithStyles(AppBar)
    className="MainAppBar-appBar-2"
    position="static"
  >
    <WithStyles(Toolbar)>
      <WithStyles(IconButton)
        className="MainAppBar-menuButton-7"
        color="inherit"
        onClick={[Function]}
      >
        <pure(MenuIcon) />
      </WithStyles(IconButton)>
      <WithStyles(Typography)
        className="MainAppBar-title-5"
        color="inherit"
        noWrap={true}
        onClick={[Function]}
        variant="h6"
      >
        title
      </WithStyles(Typography)>
      <div
        className="MainAppBar-grow-4"
      />
      <WithStyles(IconButton)
        className="MainAppBar-button-6"
      >
        <pure(HelpOutlineIcon) />
      </WithStyles(IconButton)>
      <Connect(WithStyles(UserProfileComponent)) />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
</div>
`;
